--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "batch-cc-snark",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@nomicfoundation/hardhat-ethers": "^3.0.5",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "chai": "^4.4.1",
-    "hardhat": "^2.22.3",
-    "mocha": "^10.4.0",
-    "web3": "^1.10.3"
-  },
-  "dependencies": {
-    "web3-utils": "^4.2.3"
-  }
+    "name": "batch-cc-snark",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@nomicfoundation/hardhat-ethers": "^3.0.5",
+        "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+        "@types/lodash": "^4.17.0",
+        "chai": "^4.4.1",
+        "ethers": "^6.12.0",
+        "hardhat": "^2.22.3",
+        "mocha": "^10.4.0",
+        "web3": "^1.10.3"
+    },
+    "dependencies": {
+        "web3-utils": "^4.2.3"
+    }
 }
