--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,4 @@ default = ["parallel"]
 std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "ark-groth16/std", "dock_crypto_utils/std" ]
 parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-groth16/parallel", "dock_crypto_utils/parallel"]
 print-trace = [ "ark-std/print-trace" ]
+mock = []
