--- a/contract/package.json
+++ b/contract/package.json
@@ -6,10 +6,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.22.3"
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@types/lodash": "^4.17.0",
+    "chai": "^4.4.1",
+    "ethers": "^6.12.0",
+    "hardhat": "^2.22.3",
+    "mocha": "^10.4.0",
+    "web3": "^1.10.3"
   },
   "dependencies": {
+    "web3-utils": "^4.2.3",
     "@openzeppelin/contracts": "^5.0.2"
   }
 }
