--- a/contract/package.json
+++ b/contract/package.json
@@ -13,10 +13,10 @@
     "ethers": "^6.12.0",
     "hardhat": "^2.22.3",
     "mocha": "^10.4.0",
-    "web3": "^1.10.3"
+    "web3": "^4.9.0"
   },
   "dependencies": {
-    "web3-utils": "^4.2.3",
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "web3-utils": "^4.2.3"
   }
 }
