--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ ark-crypto-primitives = { version = "0.4.0", default-features = false, features 
     "sponge",
 ] }
 ark-r1cs-std = { version = "0.4.0", default-features = false, optional = true }
-ark-groth16 = "0.4.0"
+ark-groth16 = { version = "0.4.0", default-features = false, optional = true }
 
 tracing = { version = "0.1", default-features = false, features = [
     "attributes",
@@ -35,6 +35,7 @@ sha3 = "0.10.8"
 
 [dev-dependencies]
 ark-bn254 = "0.4.0"
+rand = "0.8"
 
 [profile.release]
 opt-level = 3
@@ -57,6 +58,7 @@ std = [
     "ark-relations/std",
     "ark-crypto-primitives/std",
     "ark-std/std",
+    "ark-groth16/std",
 ]
 parallel = [
     "std",
@@ -65,7 +67,14 @@ parallel = [
     "ark-ec/parallel",
     "ark-crypto-primitives/parallel",
     "ark-std/parallel",
+    "ark-groth16/parallel",
     "rayon",
 ]
-r1cs = ["ark-crypto-primitives/r1cs", "ark-r1cs-std", "tracing", "derivative"]
+r1cs = [
+    "ark-crypto-primitives/r1cs",
+    "ark-groth16/r1cs",
+    "ark-r1cs-std",
+    "tracing",
+    "derivative",
+]
 print-trace = ["ark-std/print-trace"]
