--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ serde_json = "1.0.108"
 sha3 = "0.10.8"
 
 [dev-dependencies]
+lazy_static = "1.4.0"
+dotenv = "0.15.0"
 ark-bn254 = "0.4.0"
 rand = "0.8"
 
