feat: comp-am-com-eq simple

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-STATISTICS=1
-NUM_REPEAT=10
-LOG_MIN=1
+STATISTICS=true
+NUM_REPEAT=5
+LOG_MIN=10
 LOG_MAX=10
+
+# Eclipse Environment
+L=1024
+D0=20
+D1=10
+D2=10
